--- a/_scss/_highlights.scss
+++ b/_scss/_highlights.scss
@@ -4,7 +4,7 @@
 /***********************/
 
 .highlight { 
-  background-color: $white //$darkerGray;
+  background-color: $white; //$darkerGray;
   padding: 5px 10px;
   margin: 20px 0;
 }
