--- a/_scss/_highlights.scss
+++ b/_scss/_highlights.scss
@@ -18,7 +18,7 @@
 code {
   font-family: 'Courier', monospace;
   font-size: 14px;
-  color: #999;
+  color:  $white;//#999;
 }
  
 // Solarized Light Pygments 
